--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
       <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-timer"><line x1="10" x2="14" y1="2" y2="2"/><line x1="12" x2="12" y1="2" y2="6"/><path d="M4 13a8 8 0 0 0 16 0 8 8 0 0 0-16 0"/><path d="M12 9v5l2 2"/></svg>
       <span>Pomodoro Timer</span>
     </a>
-    <div class="hidden lg:block"></div> <!-- Placeholder for layout balance on large screens -->
+    <!-- Updated GitHub Code Option -->
+    <a href="https://cjp2oo5.github.io/" target="_blank" class="frosted-glass p-8 rounded-2xl font-bold text-gray-800 text-2xl text-center flex flex-col items-center justify-center space-y-4 transition-all duration-300 transform hover:scale-105 hover:bg-opacity-80">
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.2c3.5-1 3.5-5.9 0-7-1.4-1.2-3.8-.2-4 2.2a.5.5 0 0 1-.5.5c-1 0-1.5-.5-2-.8-1-.5-2.2-.6-3.2-.2-.5.2-1 .5-1.5.7-1 0-1.5.5-2 .8-.2.2-.4.4-.6.6-.7.7-.8 1.4-.8 2.2a.5.5 0 0 1-.5.5c-2.4.2-4.8 1.4-4 2.2-1.2 1.4-1.2 3.8 0 5-.5.2-1.5.5-2 .8-.2.2-.4.4-.6.6-.7.7-.8 1.4-.8 2.2a.5.5 0 0 1-.5.5c-2.4.2-4.8 1.4-4 2.2-1.2 1.4-1.2 3.8 0 5Z"/><path d="M9 18c-3.3 1-5 2-5 2M15 22v-4a4.8 4.8 0 0 0-1-3.2c3.5-1 3.5-5.9 0-7-1.4-1.2-3.8-.2-4 2.2a.5.5 0 0 1-.5.5c-1 0-1.5-.5-2-.8-1-.5-2.2-.6-3.2-.2-.5.2-1 .5-1.5.7-1 0-1.5.5-2 .8-.2.2-.4.4-.6.6-.7.7-.8 1.4-.8 2.2a.5.5 0 0 1-.5.5c-2.4.2-4.8 1.4-4 2.2-1.2 1.4-1.2 3.8 0 5ZM9 18c-3.3 1-5 2-5 2"/></svg>
+      <span>GitHub Code</span>
+    </a>
   </div>
 </body>
 </html>
